@@ -1,3 +1,11 @@
+2015-03-09  Pedro Alves  <palves@redhat.com>
+
+	Merge dg-extract-results.sh from GCC upstream (r218843).
+
+	2014-12-17  Sergio Durigan Junior  <sergiodj@redhat.com>
+		* dg-extract-results.sh: Use --text with grep to avoid issues with
+		binary files.  Fall back to cat -v, if that doesn't work.
+
 2015-03-05  Pedro Alves  <palves@redhat.com>
 
 	* gdb.base/bp-permanent.exp: Tighten "next over setup" regex.
